--- a/public/assets/stylesheets/application.css
+++ b/public/assets/stylesheets/application.css
@@ -2,7 +2,7 @@
  * application.css
  * 
  * Code Club Style Guide - A collection of UI components for styling Code Club websites
- * @version v0.0.0
+ * @version v0.0.1-0
  * @link https://styleguide.codeclubworld.org/
  */
 /* http://meyerweb.com/eric/tools/css/reset/
@@ -461,7 +461,8 @@ th {
           justify-content: space-between; }
 
 .body_wrap > .layout {
-  padding: 0 5%; }
+  padding-left: 5%;
+  padding-right: 5%; }
 
 .col {
   -webkit-box-flex: 0;
@@ -488,8 +489,6 @@ th {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap; }
-  .body_wrap > .layout {
-    padding: 0 5%; }
   .height-inherit {
     -webkit-box-align: start;
     -webkit-align-items: flex-start;
@@ -519,7 +518,8 @@ th {
 
 @media (min-width: 720px) {
   .body_wrap > .layout {
-    padding: 0 8%; }
+    padding-left: 8%;
+    padding-right: 8%; }
   .grid {
     background-image: url(/assets/images/grid_desktop.svg); }
   .col {
